--- a/app/views/admin_area/shared/_side_menu.html.slim
+++ b/app/views/admin_area/shared/_side_menu.html.slim
@@ -1,4 +1,4 @@
-.side-menu
-  ul.nav.navbar-nav
-    li class='active'
-      = link_to 'Organizations', admin_area_root_path
+= asside true do
+  = asside_item("Organizations",
+      path: admin_area_root_path,
+      policy: true)
