refactoring: menu view code -> helper
Why:
- Symplify view code.
- Make view code more DRY

How:
Move code to helpers and use yield in helper mehtods.

--- a/app/views/admin_area/shared/_navbar.html.slim
+++ b/app/views/admin_area/shared/_navbar.html.slim
@@ -1,8 +1,2 @@
-nav.navbar.navbar-expand-sm.navbar-dark.fixed-top
-  = link_to admin_area_root_path
-    = image_tag 'logo.png', id: 'logo', height: 21, width: 40
-
-  ul.navbar-nav.mr-auto.ml-4
-
-  ul.navbar-nav
-     a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+= menu do
+  = menu_logo "logo.png", admin_area_root_path
