--- a/app/views/administration/shared/_form_actions.slim
+++ b/app/views/administration/shared/_form_actions.slim
@@ -1,6 +1,5 @@
-.row
-  = f.submit class: "btn btn-success"
-  .btn-group.pull-right
-    - if f.object.persisted?
-      = destroy_btn(f.object)
-    = cancel_btn
+= submit_btn(f)
+.btn-group.float-right
+  - if f.object.persisted?
+    = destroy_btn(f.object)
+  = cancel_btn
