--- a/app/views/administration/board_lists/form.slim
+++ b/app/views/administration/board_lists/form.slim
@@ -1,7 +1,5 @@
 = simple_form_for [:administration, @model.model], as: :data do |f|
-  .row
-    .col-lg-12
-      = f.input :name, required: false
-      = f.input :project_id, collection: BoardList.all
+  = f.input :name, required: false
+  = f.input :project_id, collection: Project.all
 
   = render "administration/shared/form_actions", f: f
