--- a/app/views/administration/users/update.slim
+++ b/app/views/administration/users/update.slim
@@ -32,5 +32,5 @@
   .row
     .col-lg-6
     .col-lg-6
-      = f.submit class: 'btn btn-success'
-      = link_to 'Cancel', administration_user_path(f.object), class: 'btn btn-secondary pull-right'
+      = submit_btn(f)
+      = cancel_btn(administration_user_path(f.object), class: 'pull-right')
