fix: tui editor
The url of css for the tui editor was changed

--- a/app/assets/stylesheets/administration.sass
+++ b/app/assets/stylesheets/administration.sass
@@ -1,3 +1,7 @@
+@import administration/tui_editor_codemirror
+@import administration/tui_editor_github
+@import administration/tui_editor_contents
+
 @import base
 @import administration/variables
 @import administration/side_menu
