--- a/app/views/administration/shared/_side_menu.html.slim
+++ b/app/views/administration/shared/_side_menu.html.slim
@@ -1,17 +1,10 @@
-.side-menu
-  ul.nav.navbar-nav
-    li class=('active' if current_page?(controller: :dashboards, action: :show))
-      = link_to 'Dashboard', administration_root_path
-  - if policy(Record).new?
-    ul.nav.navbar-nav
-      li class=('active' if request.url.include?('records'))
-        = link_to 'Records', administration_records_path
-  - if policy(Event).index?
-    ul.nav.navbar-nav
-      li class=('active' if request.url.include?('calender'))
-        = link_to 'Calender', administration_calender_path
-  - if policy(BoardList).index?
-    ul.nav.navbar-nav
-      li class=('active' if request.url.include?('board'))
-        = link_to 'Issues', administration_board_lists_path
+= asside true do
+  = asside_item("Dashboard",
+    path: administration_root_path, policy: true)
+  = asside_item("Records",
+    path: administration_records_path, policy: policy(Record).new?)
+  = asside_item("Calender",
+    path: administration_calender_path, policy: policy(Event).index?)
+  = asside_item('Issues',
+    path: administration_board_lists_path, policy: policy(BoardList).index?)
   = render "administration/shared/shared_issue_section"
