feature(mvc, vue): add attendances
Attendances allow to see when an employee is
working.

--- a/app/assets/stylesheets/administration.sass
+++ b/app/assets/stylesheets/administration.sass
@@ -11,6 +11,7 @@
 @import administration/tui_editor
 @import administration/flash_messages
 @import administration/vuetify
+@import administration/attendances
 
 @media (min-width: 768px) 
   .w-md-auto
