feature(css): add basic mobile support
* add hamburger menu
* toogle left menu

--- a/app/assets/stylesheets/administration/navbar.sass
+++ b/app/assets/stylesheets/administration/navbar.sass
@@ -1,9 +1,17 @@
 .navbar
   background-color: $main-color
   color: white
-  height: 38px
+  .fa
+    color: white
 
   button
     color: white
     background-color: Transparent
     border: none
+
+  #side-toggle-btn
+    display: none
+
+  @media only screen and (max-width: 600px)
+    #side-toggle-btn
+      display: block
