--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -3,7 +3,7 @@ html
   head
     title CMC
     = csrf_meta_tags
-    meta name="viewport" content="width=device-width, height=device-height, initial-scale=1"
+    meta name="viewport" content="width=device-width, initial-scale=1"
 
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
