--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -23,3 +23,5 @@ html
           .flash-messages
             = render 'shared/flash_messages'
           = yield
+
+    script src="https://js.stripe.com/v3/"
