--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -12,6 +12,8 @@ html
 
     = stylesheet_link_tag 'administration', media: 'all', 'data-turbolinks-track': 'reload'
   body
+    javascript:
+      window.stripe_public_key = '#{Settings.stripe_public_key}'
     #app
       = render 'administration/shared/navbar'
       .wraper
