--- a/app/views/administration/users/configurations/form.slim
+++ b/app/views/administration/users/configurations/form.slim
@@ -1,6 +1,1 @@
-= simple_form_for @model, url: administration_user_configuration_path(@model), as: :data do |f|
-
-  = f.input :type, collection: User.descendants
-  = f.input :project_ids, required: false, collection: Project.all, multiple: true, label: "Projecs"
-
-  = render "administration/shared/form_actions", f: f
+user-configuration-edit :user-id=@model.id
