--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 html
   head
-    title CMC
+    title Ticktensio
     = csrf_meta_tags
 
     = stylesheet_link_tag 'devise', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag 'application', defer: true, 'data-turbolinks-track': 'reload'
 
-    = javascript_pack_tag 'application'
-    = stylesheet_pack_tag 'application'
+    = stylesheet_pack_tag 'application', defer: true
+    = javascript_pack_tag 'application', defer: true
 
   body#devise
     = render 'devise/navbar'
