feature: add notification job
Create notifications by a job that run
every 10 minutes.

--- a/app/views/admin_area/shared/_side_menu.html.slim
+++ b/app/views/admin_area/shared/_side_menu.html.slim
@@ -2,3 +2,7 @@
   = asside_item("Organizations",
       path: admin_area_root_path,
       policy: true)
+  = asside_item("Sideqik",
+      path: sidekiq_web_path,
+      policy: true,
+      target: :_blank)
