feature: add checkbox to enable/disable global board lists
**Context**: The ability to use global boards instead of
project spcific boards was already implemented but there
was no input to change the configuration.

**Solution**: Add a checkbox on the admin section.

--- a/app/views/administration/admin/shared/_side_menu.html.slim
+++ b/app/views/administration/admin/shared/_side_menu.html.slim
@@ -1,9 +1,9 @@
 = asside policy(Organization).show? do
   = top_asside_item("Admin",
-      path:  %i[edit administration organization],
+      path: %i[administration admin context],
       icon: :gears)
   = asside_item("General",
-      path: edit_administration_organization_path,
+      path: %i[administration admin context],
       policy: true)
   - if Settings.payment.enabled
     = asside_item("Payment",
