--- a/app/views/administration/shared/_navbar.html.slim
+++ b/app/views/administration/shared/_navbar.html.slim
@@ -29,7 +29,7 @@
           policy: policy(Contact).index?,
           includes: "contacts")
       = menu_item("Admin",
-          path: %i[edit administration organization],
+          path: %i[administration admin context],
           policy: policy(Organization).index?,
           includes: "organization")
 
