feature: add global vue router
**Context**: The aplication is a mix of rails views
and vue.js. The problem with this is performance.
Some of the views are aleady using vue router but they
are independent.

**Feature increment**: One step more in direction
to separate backend and frontent is to use a global vue
router.

--- a/app/views/administration/dashboards/show.slim
+++ b/app/views/administration/dashboards/show.slim
@@ -32,7 +32,7 @@
             tbody
               - @model[:worked_issues].each do |issue|
                 tr
-                  td = link_to issue, administration_issue_path(issue), class: "text-dark"
+                  td = link_to issue, "/administration/issues/#{issue.id}", class: "text-dark"
                   td = issue.project
                   td = SpendedTimeIssueUserCalculator.(issue, current_user)
       .card-footer
@@ -54,7 +54,7 @@ br
             tbody
               - @model[:assigned_issues].each do |issue|
                 tr
-                  td = link_to issue, administration_issue_path(issue), class: "text-dark"
+                  td = link_to issue, "/administration/issues/#{issue.id}", class: "text-dark"
                   td = issue.project
                   td = SpendedTimeIssueUserCalculator.(issue, current_user)
       .card-footer
