feature: add project statuses
**Context**: PRoject status is a feature requested
by a client to organize theyer project. Eg. archived new in progress

--- a/app/views/administration/projects/shared/_side_menu.html.slim
+++ b/app/views/administration/projects/shared/_side_menu.html.slim
@@ -1,5 +1,3 @@
 = asside policy(Project).index? do
-  = top_asside_item("Projects",
-      path: administration_projects_path,
-      icon: :tasks)
+  projects-left-aside
   = render "administration/shared/shared_issue_section"
