feature: add project documents
Show documents on documents. It use
the same models as the archive. On
the archive the documents of a project
are ignored.

--- a/app/views/administration/specific_project/shared/_side_menu.html.slim
+++ b/app/views/administration/specific_project/shared/_side_menu.html.slim
@@ -8,4 +8,7 @@
   = asside_item("Records",
       path: administration_project_records_path(@project),
       policy: policy(Record).index?)
+  = asside_item("Documents",
+      path: administration_project_documents_path(@project),
+      policy: true)
   = render "administration/shared/shared_issue_section"
