feature: port all routes to vue router
**Reasons**:
* some elements disaper for some seconds
* performance
* easer than mixing turbolinks with vue router

--- a/app/views/administration/archive/shared/_side_menu.html.slim
+++ b/app/views/administration/archive/shared/_side_menu.html.slim
@@ -1,5 +1,3 @@
 = asside true do
-  = top_asside_item("Archive",
-      path: administration_archive_path,
-      icon: :"folder-open")
+  asides
   = render "administration/shared/shared_issue_section"
