--- a/app/views/administration/shared/_side_menu.html.slim
+++ b/app/views/administration/shared/_side_menu.html.slim
@@ -1,12 +1,3 @@
 = asside true do
-  = asside_item("Dashboard",
-    path: administration_root_path, policy: true)
-  = asside_item("Records",
-    path: administration_records_path, policy: policy(Record).new?)
-  = asside_item("Calender",
-    path: administration_calender_path, policy: policy(Event).index?)
-  = asside_item("Attendances",
-    path: administration_attendances_path, policy: policy(Event).index?)
-  = asside_item('Issues',
-    path: administration_board_lists_path, policy: policy(BoardList).index?)
+  asides
   = render "administration/shared/shared_issue_section"
