--- a/app/views/administration/wiki/pages/form.slim
+++ b/app/views/administration/wiki/pages/form.slim
@@ -1,5 +1,1 @@
-= simple_form_for [:administration, @model], as: :data do |f|
-  = f.input :title
-  = f.input :wiki_category_id, collection: WikiCategory.all
-
-  = render "administration/shared/form_actions", f: f
+router-view
