feature: remove turbolinks
TBD

--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -5,12 +5,9 @@ html
     = csrf_meta_tags
     meta name="viewport" content="width=device-width, initial-scale=1"
 
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-
-    = javascript_pack_tag 'application'
     = stylesheet_pack_tag 'application'
 
-    = stylesheet_link_tag 'administration', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'administration', media: 'all'
   body
     javascript:
       window.stripe_public_key = '#{Settings.stripe_public_key}'
@@ -26,3 +23,5 @@ html
             = render 'shared/flash_messages'
           .body-content
             = yield
+    = javascript_pack_tag 'application'
+    = javascript_include_tag 'application'
