--- a/app/views/devise/_navbar.html.slim
+++ b/app/views/devise/_navbar.html.slim
@@ -3,5 +3,5 @@ nav.navbar.navbar-light
     = image_tag 'logo.png', id: 'logo'
   .pull-right
     - if Settings.multi_tenant
-      = link_to "Register", new_registration_path, class: "text-white mr-3"
+      = link_to "Register", new_registration_url(host: Settings.host), class: "text-white mr-3"
     = link_to "Login", new_session_path(User), class: "text-white mr-3"
