--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -2,6 +2,7 @@
 html
   head
     title Ticktensio
+    meta name="viewport" content="width=device-width, initial-scale=1"
     = csrf_meta_tags
 
     = stylesheet_link_tag 'devise', media: 'all', 'data-turbolinks-track': 'reload'
