feature: show when a organization was created on the admin area
**Why**: To see if the number of registrations is
growing or not.

--- a/app/views/admin_area/organizations/index.slim
+++ b/app/views/admin_area/organizations/index.slim
@@ -1,4 +1,5 @@
 ul.list-group.list-lines
   - @model.each do |organization|
     li.list-group-item
+      .text-dark.pull-right = organization.created_at&.strftime("%d-%m-%Y %H:%M")
       .text-dark = organization
