--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -6,6 +6,7 @@ html
     = csrf_meta_tags
 
     = stylesheet_link_tag 'devise', media: 'all', 'data-turbolinks-track': 'reload'
+    =Settings.header_js&.html_safe
 
   body#devise
     = render 'devise/navbar'
