--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -12,7 +12,7 @@ html
 
     = stylesheet_link_tag 'administration', media: 'all', 'data-turbolinks-track': 'reload'
     
-    =Settings.header_js&.html_safe
+    = Settings.administration_header_js&.html_safe
   body
     javascript:
       window.stripe_public_key = '#{Settings.stripe_public_key}'
