feature: add sentry to the js code
Why: Get js errors.

--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -16,6 +16,7 @@ html
   body
     javascript:
       window.stripe_public_key = '#{Settings.stripe_public_key}'
+      window.sentry_dsn = '#{Settings.sentry_dbs}' 
     #app
       = render 'administration/shared/navbar'
       .wraper
